Added kafka library, added run.sh testing we can run the preview mode without fault